# food-api

./: .dockerignore  .env_example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
foods_api/: manage.py
foods_api/api/: models.py  tests.py  urls.py  views.py
foods_api/api/fixtures/: cats_and_foods.json  expected.json
foods_api/api/migrations/: 0001_initial.py
foods_api/foods_api/: asgi.py  settings.py  urls.py  wsgi.py
